--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,13 @@
       "config": { "distDir": "dist" }
     }
   ],
+  
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
+
+
+  ,
   "routes": [
     { "src": "/(.*)", "dest": "/index.html" }
   ]
